syntax = "proto3";

package mondial_tv;

// ============================================================================
// MONDIAL TV â€” COMMON MESSAGES
// ============================================================================
// Shared messages across mondial-tv proto files
// ============================================================================

message Pagination {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResult {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}
